[Web][Harmony] Forward ref in Harmony IconButtob; Fix red kebab icon and too big tip tile close icon (#7553)

--- a/packages/web/src/pages/settings-page/components/desktop/DeveloperApps/DeveloperAppListItem.module.css
+++ b/packages/web/src/pages/settings-page/components/desktop/DeveloperApps/DeveloperAppListItem.module.css
@@ -37,7 +37,3 @@
 .listItemActions {
   flex-grow: 0;
 }
-
-.listItemActionsIcon svg {
-  color: var(--neutral-light-4) !important;
-}
