--- a/packages/web/src/pages/settings-page/components/desktop/DeveloperApps/DeveloperAppsSettingsModal.module.css
+++ b/packages/web/src/pages/settings-page/components/desktop/DeveloperApps/DeveloperAppsSettingsModal.module.css
@@ -3,7 +3,3 @@
   width: var(--unit-6);
   margin-top: 2px;
 }
-
-.titleIcon path {
-  fill: var(--neutral);
-}
